minor comments and added some todo notes (#117)

--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@ body {
 	font-family: 'Montserrat', Arial, sans-serif;
 }
 
-/*css accross all pages*/
+/*css across all pages*/
 
 .header {
 	background-color: #048004;
@@ -117,7 +117,7 @@ dt {
 	font-family: serif;
 }
 
-/*css for mainPage.html*/
+/*css for home.html*/
 
 .table {
 	margin-right: auto;
