--- a/css/main.css
+++ b/css/main.css
@@ -242,20 +242,14 @@ footer {
 	margin: 0 auto;
 }
 
-/* hacky fix for review carousel width FIXME */
-
 #reviewCarousel {
-	margin: 0 auto;
+	margin: auto;
 }
 
 .carouselReviews {
 	position: relative;
 	width: 100%;
-}
-
-.review-item {
-	width: 100%;
-	padding: 0 2rem 2rem 2rem;
+	padding: 2rem;
 }
 
 #reviewIcon {
